Implement wardrobe review fixes